# tiflux-to-glpi-migrator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mapping.example.yaml  mapping.yaml  pyproject.toml
app/: cli.py  config.py  constants.py  logging_config.py
app/clients/: glpi_installer.py  glpi_legacy_api.py  glpi_rest_v2_api.py  tiflux_api.py  tiflux_discovery.py
app/db/: models.py  session.py
app/mappers/: canonical_to_glpi.py  entity_mapper.py  mapping_loader.py  priority_mapper.py  status_mapper.py  tiflux_to_canonical.py
app/repositories/: id_map_repository.py  migration_state_repository.py  raw_manifest_repository.py
app/schemas/: canonical.py  glpi.py  tiflux.py
app/services/: analysis_service.py  attachment_service.py  discovery_service.py  export_service.py  import_service.py  reconciliation_service.py  retry_service.py  transform_service.py
app/utils/: batching.py  dates.py  files.py  hashing.py  html.py  io.py  validation.py
data/data/raw/: manifest.jsonl
scripts/: glpi-init.sh
tests/: test_analysis.py  test_hashing.py  test_idempotency.py
