[project]
name = "tiflux-glpi-migrator"
version = "0.1.0"
description = "Migrator from Tiflux to GLPI (ETL, audit, idempotent)."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "tenacity>=8.2",
  "sqlalchemy>=2.0",
  "loguru>=0.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

